Fixing body not fitting width on smaller displays.

--- a/style.scss
+++ b/style.scss
@@ -19,6 +19,7 @@ body{
   font-style: normal;
   z-index: 1;
   width: 100vw;
+  position: absolute;
 }
 
 span{
